[package]
name = "hyper-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
console-subscriber = "0.2.0"
futures = "0.3.30"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "http1"] }
hyper-rustls = "0.26.0"
hyper-util = { version = "0.1.2", features = ["client", "http1", "tokio"] }
pin-project = "1.1.3"
pretty_env_logger = "0.5.0"
reqwest = "0.11.23"
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
tokio = { version = "1.35.1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "io-std",
] }
